# TINF21C_Agentensysteme

./: .gitignore  Diagrams.drawio  README.md
AgentenSimulation/: plan.md
AgentenSimulation/src/: Agent.java  AgentIndexContract.java  Crossover.java
AgentenSimulation_1/: plan.md
AgentenSimulation_1/src/: Agent.java  AgentIndexContract.java  AustrailianSupplierAgent.java  Contract.java  Crossover.java  CustomerAgent.java  Mediator.java  RandomSupplierAgent.java  SupplierAgent.java  Verhandlung.java
AgentenSimulation_Rust/: Cargo.toml
AgentenSimulation_Rust/src/: agent.rs  contract.rs  customer_agent.rs  mediator.rs  supplier_agent.rs  verhandlung.rs
