[package]
name = "AgentenSimulation_Rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="AgentSimulation"
path="src/verhandlung.rs"



[dependencies]
rand = "0.9.0-alpha.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
rayon = "1.10.0"