[package]
name = "AgentenSimulation_Rust"
version = "0.1.0"
edition = "2021"

[profile.profile]
inherits = "release"
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="AgentSimulation"
path="src/verhandlung.rs"



[dependencies]
rand = "0.9.0-alpha.0"
rayon = "1.10.0"
clap = { version = "4.5.4", features = ["derive"] }